# recipe2grocy

./: .gitignore  README.md  example.toml  pyproject.toml
src/recipe2grocy/: __main__.py  ingredient.py  recipe2grocy.py
